// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai/stream-text basic > basic 1`] = `
[
  {
    "type": "step.start",
  },
  {
    "type": "text.start",
  },
  {
    "delta": "YES",
    "type": "text.delta",
  },
  {
    "delta": "",
    "type": "text.delta",
  },
  {
    "content": "YES",
    "type": "text.done",
  },
  {
    "type": "step.done",
    "usage": undefined,
  },
]
`;

exports[`@xsai/stream-text basic > basic 2`] = `
[
  {
    "finishReason": "stop",
    "text": "YES",
    "toolCalls": [],
    "toolResults": [],
    "usage": undefined,
  },
]
`;

exports[`@xsai/stream-text basic > includes usage 1`] = `
[
  {
    "type": "step.start",
  },
  {
    "type": "text.start",
  },
  {
    "delta": "Sure",
    "type": "text.delta",
  },
  {
    "delta": ",",
    "type": "text.delta",
  },
  {
    "delta": " here",
    "type": "text.delta",
  },
  {
    "delta": "'s",
    "type": "text.delta",
  },
  {
    "delta": " a",
    "type": "text.delta",
  },
  {
    "delta": " quick",
    "type": "text.delta",
  },
  {
    "delta": " one",
    "type": "text.delta",
  },
  {
    "delta": ":",
    "type": "text.delta",
  },
  {
    "delta": " Why",
    "type": "text.delta",
  },
  {
    "delta": " don",
    "type": "text.delta",
  },
  {
    "delta": "'t",
    "type": "text.delta",
  },
  {
    "delta": " scientists",
    "type": "text.delta",
  },
  {
    "delta": " trust",
    "type": "text.delta",
  },
  {
    "delta": " atoms",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "delta": " Because",
    "type": "text.delta",
  },
  {
    "delta": " they",
    "type": "text.delta",
  },
  {
    "delta": " make",
    "type": "text.delta",
  },
  {
    "delta": " up",
    "type": "text.delta",
  },
  {
    "delta": " everything",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": "",
    "type": "text.delta",
  },
  {
    "content": "Sure, here's a quick one: Why don't scientists trust atoms? Because they make up everything!",
    "type": "text.done",
  },
  {
    "type": "step.done",
    "usage": {
      "inputTokens": 24,
      "outputTokens": 22,
      "totalTokens": 46,
    },
  },
]
`;

exports[`@xsai/stream-text basic > includes usage 2`] = `
[
  {
    "finishReason": "stop",
    "text": "Sure, here's a quick one: Why don't scientists trust atoms? Because they make up everything!",
    "toolCalls": [],
    "toolResults": [],
    "usage": {
      "inputTokens": 24,
      "outputTokens": 22,
      "totalTokens": 46,
    },
  },
]
`;

exports[`@xsai/stream-text basic > stream 1`] = `
[
  {
    "type": "step.start",
  },
  {
    "type": "text.start",
  },
  {
    "delta": "Sure",
    "type": "text.delta",
  },
  {
    "delta": ",",
    "type": "text.delta",
  },
  {
    "delta": " here",
    "type": "text.delta",
  },
  {
    "delta": "'s",
    "type": "text.delta",
  },
  {
    "delta": " a",
    "type": "text.delta",
  },
  {
    "delta": " joke",
    "type": "text.delta",
  },
  {
    "delta": " for",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": ":",
    "type": "text.delta",
  },
  {
    "delta": " Why",
    "type": "text.delta",
  },
  {
    "delta": " don",
    "type": "text.delta",
  },
  {
    "delta": "'t",
    "type": "text.delta",
  },
  {
    "delta": " scientists",
    "type": "text.delta",
  },
  {
    "delta": " trust",
    "type": "text.delta",
  },
  {
    "delta": " atoms",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "delta": " Because",
    "type": "text.delta",
  },
  {
    "delta": " they",
    "type": "text.delta",
  },
  {
    "delta": " make",
    "type": "text.delta",
  },
  {
    "delta": " up",
    "type": "text.delta",
  },
  {
    "delta": " everything",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": "",
    "type": "text.delta",
  },
  {
    "content": "Sure, here's a joke for you: Why don't scientists trust atoms? Because they make up everything!",
    "type": "text.done",
  },
  {
    "type": "step.done",
    "usage": undefined,
  },
]
`;

exports[`@xsai/stream-text basic > stream 2`] = `
[
  {
    "finishReason": "stop",
    "text": "Sure, here's a joke for you: Why don't scientists trust atoms? Because they make up everything!",
    "toolCalls": [],
    "toolResults": [],
    "usage": undefined,
  },
]
`;
